--- a/templates/apps.json
+++ b/templates/apps.json
@@ -16,7 +16,7 @@
         "memory_mb": 2048,
         "disk_gb": 20
       },
-      "docker_compose": "version: '3.8'\nservices:\n  wordpress:\n    image: wordpress:latest\n    ports:\n      - '80:80'\n    environment:\n      WORDPRESS_DB_HOST: db\n      WORDPRESS_DB_USER: wordpress\n      WORDPRESS_DB_PASSWORD: wordpress\n      WORDPRESS_DB_NAME: wordpress\n    volumes:\n      - wordpress_data:/var/www/html\n    restart: unless-stopped\n  db:\n    image: mysql:8.0\n    environment:\n      MYSQL_DATABASE: wordpress\n      MYSQL_USER: wordpress\n      MYSQL_PASSWORD: wordpress\n      MYSQL_ROOT_PASSWORD: rootpassword\n    volumes:\n      - db_data:/var/lib/mysql\n    restart: unless-stopped\nvolumes:\n  wordpress_data:\n  db_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  wordpress:\n    image: wordpress:latest\n    ports:\n      - '80:80'\n    environment:\n      WORDPRESS_DB_HOST: db\n      WORDPRESS_DB_USER: wordpress\n      WORDPRESS_DB_PASSWORD: __GENERATED_PASSWORD__\n      WORDPRESS_DB_NAME: wordpress\n    volumes:\n      - wordpress_data:/var/www/html\n    restart: unless-stopped\n  db:\n    image: mysql:8.0\n    environment:\n      MYSQL_DATABASE: wordpress\n      MYSQL_USER: wordpress\n      MYSQL_PASSWORD: __GENERATED_PASSWORD__\n      MYSQL_ROOT_PASSWORD: __GENERATED_ROOT_PASSWORD__\n    volumes:\n      - db_data:/var/lib/mysql\n    restart: unless-stopped\nvolumes:\n  wordpress_data:\n  db_data:",
       "estimated_cost_per_day": 0.68
     },
     {
@@ -73,7 +73,7 @@
         "memory_mb": 2048,
         "disk_gb": 20
       },
-      "docker_compose": "version: '3.8'\nservices:\n  code-server:\n    image: codercom/code-server:latest\n    ports:\n      - '80:8080'\n    environment:\n      PASSWORD: changeme\n    volumes:\n      - code_data:/home/coder\n    restart: unless-stopped\nvolumes:\n  code_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  code-server:\n    image: codercom/code-server:latest\n    ports:\n      - '80:8080'\n    environment:\n      PASSWORD: __GENERATED_PASSWORD__\n    volumes:\n      - code_data:/home/coder\n    restart: unless-stopped\nvolumes:\n  code_data:",
       "estimated_cost_per_day": 0.68
     },
     {
@@ -111,7 +111,7 @@
         "memory_mb": 1024,
         "disk_gb": 20
       },
-      "docker_compose": "version: '3.8'\nservices:\n  postgres:\n    image: postgres:16-alpine\n    ports:\n      - '5432:5432'\n    environment:\n      POSTGRES_PASSWORD: changeme\n      POSTGRES_DB: main\n    volumes:\n      - pg_data:/var/lib/postgresql/data\n    restart: unless-stopped\nvolumes:\n  pg_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  postgres:\n    image: postgres:16-alpine\n    ports:\n      - '5432:5432'\n    environment:\n      POSTGRES_PASSWORD: __GENERATED_PASSWORD__\n      POSTGRES_DB: main\n    volumes:\n      - pg_data:/var/lib/postgresql/data\n    restart: unless-stopped\nvolumes:\n  pg_data:",
       "estimated_cost_per_day": 0.34
     },
     {
@@ -168,7 +168,7 @@
         "memory_mb": 1024,
         "disk_gb": 10
       },
-      "docker_compose": "version: '3.8'\nservices:\n  n8n:\n    image: n8nio/n8n:latest\n    ports:\n      - '80:5678'\n    environment:\n      N8N_BASIC_AUTH_ACTIVE: 'true'\n      N8N_BASIC_AUTH_USER: admin\n      N8N_BASIC_AUTH_PASSWORD: changeme\n    volumes:\n      - n8n_data:/home/node/.n8n\n    restart: unless-stopped\nvolumes:\n  n8n_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  n8n:\n    image: n8nio/n8n:latest\n    ports:\n      - '80:5678'\n    environment:\n      N8N_BASIC_AUTH_ACTIVE: 'true'\n      N8N_BASIC_AUTH_USER: admin\n      N8N_BASIC_AUTH_PASSWORD: __GENERATED_PASSWORD__\n    volumes:\n      - n8n_data:/home/node/.n8n\n    restart: unless-stopped\nvolumes:\n  n8n_data:",
       "estimated_cost_per_day": 0.34
     },
     {
@@ -187,7 +187,7 @@
         "memory_mb": 2048,
         "disk_gb": 50
       },
-      "docker_compose": "version: '3.8'\nservices:\n  minio:\n    image: minio/minio:latest\n    ports:\n      - '9000:9000'\n      - '9001:9001'\n    environment:\n      MINIO_ROOT_USER: admin\n      MINIO_ROOT_PASSWORD: changeme123\n    volumes:\n      - minio_data:/data\n    command: server /data --console-address ':9001'\n    restart: unless-stopped\nvolumes:\n  minio_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  minio:\n    image: minio/minio:latest\n    ports:\n      - '9000:9000'\n      - '9001:9001'\n    environment:\n      MINIO_ROOT_USER: admin\n      MINIO_ROOT_PASSWORD: __GENERATED_PASSWORD__\n    volumes:\n      - minio_data:/data\n    command: server /data --console-address ':9001'\n    restart: unless-stopped\nvolumes:\n  minio_data:",
       "estimated_cost_per_day": 0.68
     },
     {
@@ -208,7 +208,7 @@
         "memory_mb": 2048,
         "disk_gb": 50
       },
-      "docker_compose": "version: '3.8'\nservices:\n  nextcloud:\n    image: nextcloud:latest\n    ports:\n      - '80:80'\n    environment:\n      MYSQL_HOST: db\n      MYSQL_DATABASE: nextcloud\n      MYSQL_USER: nextcloud\n      MYSQL_PASSWORD: nextcloud\n      NEXTCLOUD_ADMIN_USER: admin\n      NEXTCLOUD_ADMIN_PASSWORD: changeme\n    volumes:\n      - nextcloud_data:/var/www/html\n    depends_on:\n      - db\n    restart: unless-stopped\n  db:\n    image: mariadb:10.11\n    environment:\n      MYSQL_DATABASE: nextcloud\n      MYSQL_USER: nextcloud\n      MYSQL_PASSWORD: nextcloud\n      MYSQL_ROOT_PASSWORD: rootpassword\n    volumes:\n      - db_data:/var/lib/mysql\n    restart: unless-stopped\nvolumes:\n  nextcloud_data:\n  db_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  nextcloud:\n    image: nextcloud:latest\n    ports:\n      - '80:80'\n    environment:\n      MYSQL_HOST: db\n      MYSQL_DATABASE: nextcloud\n      MYSQL_USER: nextcloud\n      MYSQL_PASSWORD: __GENERATED_PASSWORD__\n      NEXTCLOUD_ADMIN_USER: admin\n      NEXTCLOUD_ADMIN_PASSWORD: __GENERATED_PASSWORD__\n    volumes:\n      - nextcloud_data:/var/www/html\n    depends_on:\n      - db\n    restart: unless-stopped\n  db:\n    image: mariadb:10.11\n    environment:\n      MYSQL_DATABASE: nextcloud\n      MYSQL_USER: nextcloud\n      MYSQL_PASSWORD: __GENERATED_PASSWORD__\n      MYSQL_ROOT_PASSWORD: __GENERATED_ROOT_PASSWORD__\n    volumes:\n      - db_data:/var/lib/mysql\n    restart: unless-stopped\nvolumes:\n  nextcloud_data:\n  db_data:",
       "estimated_cost_per_day": 0.85
     },
     {
@@ -228,7 +228,7 @@
         "memory_mb": 512,
         "disk_gb": 5
       },
-      "docker_compose": "version: '3.8'\nservices:\n  vaultwarden:\n    image: vaultwarden/server:latest\n    ports:\n      - '80:80'\n    environment:\n      DOMAIN: https://vault.example.com\n      SIGNUPS_ALLOWED: 'true'\n      ADMIN_TOKEN: changeme_generate_random_token\n    volumes:\n      - vaultwarden_data:/data\n    restart: unless-stopped\nvolumes:\n  vaultwarden_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  vaultwarden:\n    image: vaultwarden/server:latest\n    ports:\n      - '80:80'\n    environment:\n      DOMAIN: https://vault.example.com\n      SIGNUPS_ALLOWED: 'true'\n      ADMIN_TOKEN: __GENERATED_PASSWORD__\n    volumes:\n      - vaultwarden_data:/data\n    restart: unless-stopped\nvolumes:\n  vaultwarden_data:",
       "estimated_cost_per_day": 0.17
     },
     {
@@ -249,7 +249,7 @@
         "memory_mb": 2048,
         "disk_gb": 20
       },
-      "docker_compose": "version: '3.8'\nservices:\n  prometheus:\n    image: prom/prometheus:latest\n    ports:\n      - '9090:9090'\n    volumes:\n      - prometheus_data:/prometheus\n      - ./prometheus.yml:/etc/prometheus/prometheus.yml\n    command:\n      - '--config.file=/etc/prometheus/prometheus.yml'\n      - '--storage.tsdb.path=/prometheus'\n    restart: unless-stopped\n  grafana:\n    image: grafana/grafana:latest\n    ports:\n      - '80:3000'\n    environment:\n      GF_SECURITY_ADMIN_USER: admin\n      GF_SECURITY_ADMIN_PASSWORD: changeme\n      GF_USERS_ALLOW_SIGN_UP: 'false'\n    volumes:\n      - grafana_data:/var/lib/grafana\n    depends_on:\n      - prometheus\n    restart: unless-stopped\nvolumes:\n  prometheus_data:\n  grafana_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  prometheus:\n    image: prom/prometheus:latest\n    ports:\n      - '9090:9090'\n    volumes:\n      - prometheus_data:/prometheus\n      - ./prometheus.yml:/etc/prometheus/prometheus.yml\n    command:\n      - '--config.file=/etc/prometheus/prometheus.yml'\n      - '--storage.tsdb.path=/prometheus'\n    restart: unless-stopped\n  grafana:\n    image: grafana/grafana:latest\n    ports:\n      - '80:3000'\n    environment:\n      GF_SECURITY_ADMIN_USER: admin\n      GF_SECURITY_ADMIN_PASSWORD: __GENERATED_PASSWORD__\n      GF_USERS_ALLOW_SIGN_UP: 'false'\n    volumes:\n      - grafana_data:/var/lib/grafana\n    depends_on:\n      - prometheus\n    restart: unless-stopped\nvolumes:\n  prometheus_data:\n  grafana_data:",
       "estimated_cost_per_day": 0.68
     },
     {
@@ -270,7 +270,7 @@
         "memory_mb": 4096,
         "disk_gb": 20
       },
-      "docker_compose": "version: '3.8'\nservices:\n  jupyter:\n    image: jupyter/datascience-notebook:latest\n    ports:\n      - '80:8888'\n    environment:\n      JUPYTER_TOKEN: changeme\n      JUPYTER_ENABLE_LAB: 'yes'\n    volumes:\n      - jupyter_data:/home/jovyan/work\n    restart: unless-stopped\nvolumes:\n  jupyter_data:",
+      "docker_compose": "version: '3.8'\nservices:\n  jupyter:\n    image: jupyter/datascience-notebook:latest\n    ports:\n      - '80:8888'\n    environment:\n      JUPYTER_TOKEN: __GENERATED_PASSWORD__\n      JUPYTER_ENABLE_LAB: 'yes'\n    volumes:\n      - jupyter_data:/home/jovyan/work\n    restart: unless-stopped\nvolumes:\n  jupyter_data:",
       "estimated_cost_per_day": 1.02
     },
     {
@@ -332,7 +332,7 @@
         "memory_mb": 4096,
         "disk_gb": 100
       },
-      "docker_compose": "version: '3.8'\nservices:\n  immich-server:\n    image: ghcr.io/immich-app/immich-server:release\n    ports:\n      - '80:3001'\n    environment:\n      DB_HOSTNAME: database\n      DB_USERNAME: postgres\n      DB_PASSWORD: postgres\n      DB_DATABASE_NAME: immich\n      REDIS_HOSTNAME: redis\n    volumes:\n      - upload_data:/usr/src/app/upload\n    depends_on:\n      - redis\n      - database\n    restart: unless-stopped\n  immich-machine-learning:\n    image: ghcr.io/immich-app/immich-machine-learning:release\n    volumes:\n      - model_cache:/cache\n    restart: unless-stopped\n  redis:\n    image: redis:6.2-alpine\n    restart: unless-stopped\n  database:\n    image: tensorchord/pgvecto-rs:pg14-v0.2.0\n    environment:\n      POSTGRES_PASSWORD: postgres\n      POSTGRES_USER: postgres\n      POSTGRES_DB: immich\n    volumes:\n      - pgdata:/var/lib/postgresql/data\n    restart: unless-stopped\nvolumes:\n  upload_data:\n  model_cache:\n  pgdata:",
+      "docker_compose": "version: '3.8'\nservices:\n  immich-server:\n    image: ghcr.io/immich-app/immich-server:release\n    ports:\n      - '80:3001'\n    environment:\n      DB_HOSTNAME: database\n      DB_USERNAME: postgres\n      DB_PASSWORD: __GENERATED_PASSWORD__\n      DB_DATABASE_NAME: immich\n      REDIS_HOSTNAME: redis\n    volumes:\n      - upload_data:/usr/src/app/upload\n    depends_on:\n      - redis\n      - database\n    restart: unless-stopped\n  immich-machine-learning:\n    image: ghcr.io/immich-app/immich-machine-learning:release\n    volumes:\n      - model_cache:/cache\n    restart: unless-stopped\n  redis:\n    image: redis:6.2-alpine\n    restart: unless-stopped\n  database:\n    image: tensorchord/pgvecto-rs:pg14-v0.2.0\n    environment:\n      POSTGRES_PASSWORD: __GENERATED_PASSWORD__\n      POSTGRES_USER: postgres\n      POSTGRES_DB: immich\n    volumes:\n      - pgdata:/var/lib/postgresql/data\n    restart: unless-stopped\nvolumes:\n  upload_data:\n  model_cache:\n  pgdata:",
       "estimated_cost_per_day": 1.7
     },
     {
@@ -353,7 +353,7 @@
         "memory_mb": 2048,
         "disk_gb": 30
       },
-      "docker_compose": "version: '3.8'\nservices:\n  paperless:\n    image: ghcr.io/paperless-ngx/paperless-ngx:latest\n    ports:\n      - '80:8000'\n    environment:\n      PAPERLESS_REDIS: redis://redis:6379\n      PAPERLESS_DBHOST: db\n      PAPERLESS_DBNAME: paperless\n      PAPERLESS_DBUSER: paperless\n      PAPERLESS_DBPASS: paperless\n      PAPERLESS_ADMIN_USER: admin\n      PAPERLESS_ADMIN_PASSWORD: changeme\n      PAPERLESS_OCR_LANGUAGE: eng\n    volumes:\n      - paperless_data:/usr/src/paperless/data\n      - paperless_media:/usr/src/paperless/media\n      - paperless_export:/usr/src/paperless/export\n      - paperless_consume:/usr/src/paperless/consume\n    depends_on:\n      - db\n      - redis\n    restart: unless-stopped\n  db:\n    image: postgres:15\n    environment:\n      POSTGRES_DB: paperless\n      POSTGRES_USER: paperless\n      POSTGRES_PASSWORD: paperless\n    volumes:\n      - pgdata:/var/lib/postgresql/data\n    restart: unless-stopped\n  redis:\n    image: redis:7\n    restart: unless-stopped\nvolumes:\n  paperless_data:\n  paperless_media:\n  paperless_export:\n  paperless_consume:\n  pgdata:",
+      "docker_compose": "version: '3.8'\nservices:\n  paperless:\n    image: ghcr.io/paperless-ngx/paperless-ngx:latest\n    ports:\n      - '80:8000'\n    environment:\n      PAPERLESS_REDIS: redis://redis:6379\n      PAPERLESS_DBHOST: db\n      PAPERLESS_DBNAME: paperless\n      PAPERLESS_DBUSER: paperless\n      PAPERLESS_DBPASS: __GENERATED_PASSWORD__\n      PAPERLESS_ADMIN_USER: admin\n      PAPERLESS_ADMIN_PASSWORD: __GENERATED_PASSWORD__\n      PAPERLESS_OCR_LANGUAGE: eng\n    volumes:\n      - paperless_data:/usr/src/paperless/data\n      - paperless_media:/usr/src/paperless/media\n      - paperless_export:/usr/src/paperless/export\n      - paperless_consume:/usr/src/paperless/consume\n    depends_on:\n      - db\n      - redis\n    restart: unless-stopped\n  db:\n    image: postgres:15\n    environment:\n      POSTGRES_DB: paperless\n      POSTGRES_USER: paperless\n      POSTGRES_PASSWORD: __GENERATED_PASSWORD__\n    volumes:\n      - pgdata:/var/lib/postgresql/data\n    restart: unless-stopped\n  redis:\n    image: redis:7\n    restart: unless-stopped\nvolumes:\n  paperless_data:\n  paperless_media:\n  paperless_export:\n  paperless_consume:\n  pgdata:",
       "estimated_cost_per_day": 0.68
     },
     {
